Add support for ThumbnailSet in OneDrive SDK

--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Services\MicrosoftTranslator\AzureAuthToken.cs" />
     <Compile Include="Services\MicrosoftTranslator\ITranslatorService.cs" />
     <Compile Include="Services\MicrosoftTranslator\TranslatorService.cs" />
+    <Compile Include="Services\OneDrive\OneDriveThumbnailSet.cs" />
     <Compile Include="Services\OneDrive\OneDriveUploadConstants.cs" />
     <Compile Include="Services\OneDrive\UserInfoSettings.cs" />
     <Compile Include="Services\Twitter\TwitterErrors.cs" />
