Move ScrollHeader properties to enum to avoid conflicts

--- a/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Animations/Microsoft.Toolkit.Uwp.UI.Animations.csproj
@@ -60,7 +60,8 @@
     <Compile Include="Behaviors\Rotate.cs" />
     <Compile Include="Behaviors\Scale.cs" />
     <Compile Include="AnimationSet.cs" />
-    <Compile Include="Behaviors\ScrollHeaderBehavior.cs" />
+    <Compile Include="Behaviors\StickyHeaderBehavior.cs" />
+    <Compile Include="Behaviors\QuickReturnHeaderBehavior.cs" />
     <Compile Include="EffectAnimationDefinition.cs" />
     <Compile Include="EffectDirectPropertyChangeDefinition.cs" />
     <Compile Include="EasingType.cs" />
