--- a/Microsoft.Toolkit.Uwp.SampleApp/project.json
+++ b/Microsoft.Toolkit.Uwp.SampleApp/project.json
@@ -5,7 +5,8 @@
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Newtonsoft.Json": "9.0.1",
     "NotificationsVisualizerLibrary": "1.0.1",
-    "StyleCop.Analyzers": "1.0.0"
+    "StyleCop.Analyzers": "1.0.0",
+    "UWP.SDKforGoogleAnalytics.Managed": "1.4.9"
   },
   "frameworks": {
     "uap10.0": {}
