--- a/Microsoft.Toolkit.Uwp.UI.Controls/project.json
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
-    "Robmikh.CompositionSurfaceFactory": "0.7.0-alpha",
+    "Robmikh.CompositionSurfaceFactory": "0.7.1",
     "StyleCop.Analyzers": "1.0.0"
   },
   "frameworks": {
