--- a/Microsoft.Toolkit.Uwp.Services/project.json
+++ b/Microsoft.Toolkit.Uwp.Services/project.json
@@ -5,6 +5,7 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.OneDriveSDK": "2.0.6",
     "Microsoft.OneDriveSDK.Authentication": "1.0.8",
+    "StyleCop.Analyzers": "1.0.0",
     "winsdkfb": "0.12.20161020.4"
   },
   "frameworks": {
