--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -130,29 +130,29 @@
     <Content Include="Assets\NotificationAssets\Sunny.png" />
     <Content Include="Assets\NotificationAssets\Thunderstorms-Square.png" />
     <Content Include="Assets\NotificationAssets\Thunderstorms.png" />
-    <Content Include="Assets\Photos\BigFourSummerHeat.png" />
-    <Content Include="Assets\Photos\BisonBadlandsChillin.png" />
-    <Content Include="Assets\Photos\ColumbiaRiverGorge.png" />
-    <Content Include="Assets\Photos\GiantSlabInOregon.png" />
-    <Content Include="Assets\Photos\GrandTetons.png" />
+    <Content Include="Assets\Photos\BigFourSummerHeat.jpg" />
+    <Content Include="Assets\Photos\BisonBadlandsChillin.jpg" />
+    <Content Include="Assets\Photos\ColumbiaRiverGorge.jpg" />
+    <Content Include="Assets\Photos\GiantSlabInOregon.jpg" />
+    <Content Include="Assets\Photos\GrandTetons.jpg" />
     <Content Include="Assets\Photos\ImageExPlaceholder.jpg" />
-    <Content Include="Assets\Photos\LakeAnnMushroom.png" />
-    <Content Include="Assets\Photos\LunchBreak.png" />
-    <Content Include="Assets\Photos\MilkyWayStHelensHikePurple.png" />
-    <Content Include="Assets\Photos\MitchellButtes.png" />
-    <Content Include="Assets\Photos\MultnomahFalls.png" />
-    <Content Include="Assets\Photos\NorthernCascadesReflection.png" />
-    <Content Include="Assets\Photos\NovemberHikeWaterfall.png" />
-    <Content Include="Assets\Photos\OregonWineryNamaste.png" />
-    <Content Include="Assets\Photos\Owl.png" />
-    <Content Include="Assets\Photos\PaintedHillsPathway.png" />
-    <Content Include="Assets\Photos\RunningDogPacificCity.png" />
-    <Content Include="Assets\Photos\ShootingOnAutoOnTheDrone.png" />
-    <Content Include="Assets\Photos\SmithnRockDownTheRiverView.png" />
-    <Content Include="Assets\Photos\SnowyInterbayt.png" />
-    <Content Include="Assets\Photos\SpeedTripleAtristsPoint.png" />
-    <Content Include="Assets\Photos\Van.png" />
-    <Content Include="Assets\Photos\WestSeattleView.png" />
+    <Content Include="Assets\Photos\LakeAnnMushroom.jpg" />
+    <Content Include="Assets\Photos\LunchBreak.jpg" />
+    <Content Include="Assets\Photos\MilkyWayStHelensHikePurple.jpg" />
+    <Content Include="Assets\Photos\MitchellButtes.jpg" />
+    <Content Include="Assets\Photos\MultnomahFalls.jpg" />
+    <Content Include="Assets\Photos\NorthernCascadesReflection.jpg" />
+    <Content Include="Assets\Photos\NovemberHikeWaterfall.jpg" />
+    <Content Include="Assets\Photos\OregonWineryNamaste.jpg" />
+    <Content Include="Assets\Photos\Owl.jpg" />
+    <Content Include="Assets\Photos\PaintedHillsPathway.jpg" />
+    <Content Include="Assets\Photos\RunningDogPacificCity.jpg" />
+    <Content Include="Assets\Photos\ShootingOnAutoOnTheDrone.jpg" />
+    <Content Include="Assets\Photos\SmithnRockDownTheRiverView.jpg" />
+    <Content Include="Assets\Photos\SnowyInterbayt.jpg" />
+    <Content Include="Assets\Photos\SpeedTripleAtristsPoint.jpg" />
+    <Content Include="Assets\Photos\Van.jpg" />
+    <Content Include="Assets\Photos\WestSeattleView.jpg" />
     <Content Include="Assets\ToolkitLogoTransparent.png" />
     <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-100.png" />
     <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-125.png" />
